# lobechat-plugins

./: .gitignore  Dockerfile  api.py  docker-compose.yml  docker_compose.yml  pyproject.toml  requirements.txt  run.sh
backends/: composite.py
backends/composite/: search_scrape.py  subtitles.py
backends/scrape/: base.py  crawl4_ai.py
backends/search/: base.py  exceptions.py  searxng.py
backends/subtitles/: base.py  simplesrt.py  ytdlp.py
public/: manifest.json  openapi.json
